# GradWorkGUI

./: .clang-format  .gitignore  CMakeLists.txt  README.md
QueSys/: CMakeLists.txt
QueSys/include/QueSys/: event.h  event.hpp  queueing_system.h  req_flow.h  req_queue.h  request.h  request.hpp  request_info.h  requests_flow.h  requests_queue.h  system_parameters_types.h
QueSys/src/: event.cpp  queueing_system.cpp  request.cpp  request_info.cpp  requests_flow.hpp  requests_queue.hpp
QueSys/test/: CMakeLists.txt  demonstration.cpp
include/Backend/: backend_object.h  synchronizer.h  system_data.h  worker_object.h
include/Widgets/: loading_widget.h  status_bar.h
include/Widgets/Graphs/: graphs_switch.h  graphs_view.h
src/: backend_object.cpp  backend_object.h  backendobject.cpp  backendobject.h  backendobjectworker.cpp  backendobjectworker.h  events_model.cpp  events_model.h  graphs_data.cpp  graphs_data.h  graphs_switch.cpp  graphs_switch.h  graphs_view.cpp  graphs_view.h  graphs_widget.cpp  graphs_widget.h  input_data.h  input_widget.cpp  input_widget.h  loading_widget.cpp  loading_widget.h  main.cpp  main_window.cpp  main_window.h  models.cpp  models.h  points_data.h  progress.cpp  progress.h  quesys_simulation.h  requests_model.cpp  requests_model.h  resources.qrc  results_widget.cpp  results_widget.h  simulation_control.hpp  simulation_interface.hpp  simulation_worker.h  simulationworker.h  status_bar.cpp  (+15 more)
src/images/: loading.pdn
